CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

set (LIBDCDCUSB_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set (LIBDCDCUSB_HEADERDIR "${LIBDCDCUSB_DIR}/headers")
set (LIBDCDCUSB_HEADERS ${LIBDCDCUSB_HEADERDIR}/dcdc-usb.h)
#set (LIBDCDCUSB_HEADERS ${LIBDCDCUSB_HEADERS} ${LIBDCDCUSB_HEADERDIR}/More headers)


include_directories(${LIBDCDCUSB_HEADERDIR})
add_subdirectory("sources")
